# LicenseClient

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  buildDocker.yml  main.yml  webhook.yml
res/docker/: Dockerfile.win
src/: Client.cpp  Client.h  Version.h.in  version.rc.in  wrapper.cpp
src/licfile/: LicFile.cpp  LicFile.h
src/licmanager/: LicManager.cpp  LicManager.h
src/security/: Security.cpp  Security.h
src/server/: Server.cpp  Server.h
src/utils/: utils.cpp  utils.h
src/validator/: Validator.cpp  Validator.h
